fix: display of Preloader component on tablet, mobile screens

--- a/src/assets/scss/media.scss
+++ b/src/assets/scss/media.scss
@@ -4,6 +4,7 @@
     }
     .search__list {
         order: 1;
+        width: 100%;
     }
     .filter {
         width: 100%;
